fix text alignment

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -282,7 +282,7 @@ nav {
     font-weight: 200;
     color: var(--light);
     text-shadow: rgb(0, 0, 0) 0px 1px 2px;
-
+    text-align: center;
 }
 //footer and stuff
 .pageEnd {
